Sonar suggested cleanup